// ============================================================
// Aranya CRM - Entity Relationship Diagram (DBML)
// Paste at: https://dbdiagram.io
//
// Access Zone Legend:
//   [ADMIN ONLY]   - Admin role only
//   [ADMIN + SW]   - Admin + Social Worker
//   [ALL ROLES]    - All roles (Volunteer sees only marked columns)
//   [ALL - WRITE]  - All roles can write; read scope varies
// ============================================================


// ============================================================
// ZONE: AUTH  [ADMIN ONLY]
// ============================================================

Table role [note: 'ADMIN ONLY\nSystem roles: ADMIN, SOCIAL_WORKER, VOLUNTEER'] {
  id          bigint      [pk, increment, not null]
  name        varchar(50) [unique, not null]
  description varchar(255)
}

Table users [note: 'ALL ROLES - authenticate self\nADMIN ONLY - create / manage / assign roles'] {
  id                  bigint       [pk, increment, not null]
  username            varchar(50)  [unique, not null]
  full_name           varchar(100) [not null]
  email               varchar(100) [unique, not null]
  phone               varchar(20)
  password_hash       varchar(255) [not null]
  status              varchar(20)  [not null, default: 'ACTIVE', note: 'ACTIVE | INACTIVE | SUSPENDED']
  two_factor_enabled  boolean      [not null, default: false]
  two_factor_secret   varchar(512)
}

Table user_role [note: 'ADMIN ONLY - assign/revoke roles'] {
  id          bigint    [pk, increment, not null]
  user_id     bigint    [not null, ref: > users.id]
  role_id     bigint    [not null, ref: > role.id]
  assigned_at timestamp [not null]
  assigned_by bigint    [ref: > users.id]

  indexes {
    (user_id, role_id) [unique]
  }
}

Table invitation [note: 'ADMIN ONLY - invite new users\nSocial Worker cannot create invitations'] {
  id               bigint       [pk, increment, not null]
  email            varchar(100) [not null]
  token            varchar(255) [unique, not null]
  assigned_role_id bigint       [not null, ref: > role.id]
  invited_by       bigint       [not null, ref: > users.id]
  status           varchar(20)  [not null, default: 'PENDING', note: 'PENDING | ACCEPTED | EXPIRED']
  expires_at       timestamp    [not null]
  accepted_at      timestamp
  created_at       timestamp    [not null]
}

Table email_notification_log [note: 'ADMIN ONLY - audit trail for outbound emails'] {
  id                 bigint       [pk, increment, not null]
  send_user_id       bigint       [not null, ref: > users.id]
  recipient_user_id  bigint       [ref: > users.id]
  recipient_email    varchar(100) [not null]
  source_type        varchar(50)  [not null]
  source_id          bigint
  send_at            timestamp    [not null]
}

Table refresh_token [note: 'SYSTEM - JWT refresh token management'] {
  id          bigint       [pk, increment, not null]
  token_hash  varchar(255) [unique, not null]
  user_id     bigint       [not null, ref: > users.id]
  expires_at  timestamp    [not null]
  created_at  timestamp    [not null]
  revoked     boolean      [not null, default: false]
}

Table two_factor_backup_code [note: 'SYSTEM - TOTP 2FA backup recovery codes'] {
  id         bigint      [pk, increment, not null]
  user_id    bigint      [not null, ref: > users.id]
  code_hash  varchar(64) [not null]
  used       boolean     [not null, default: false]
  created_at timestamp   [not null]
}


// ============================================================
// ZONE: CLIENT
// ALL ROLES can view "basic" columns (marked [V])
// ADMIN + SW can view all columns
// ============================================================

Table client [note: 'Columns marked [V] = Volunteer-visible\nAll other columns = Admin+SW only'] {
  id bigint [pk, increment, not null]

  // ── Basic Info (ALL ROLES) ──────────────────────────────
  abbr                    varchar(20)  [unique, not null, note: '[V] 法号缩写']
  name_en                 varchar(150) [not null, note: '[V] 法名（英）']
  name_chn                varchar(100) [note: '[V] 法名（中）']
  contact                 varchar(20)  [note: '[V] 联系电话']
  preferred_communication varchar(50)  [note: '[V] 首选联系方式']
  preferred_language      varchar(50)  [note: '[V] 首选语言']
  area_district           varchar(100) [note: '[V] 区域（非完整地址）']
  membership_status       varchar(30)  [not null, default: 'ACTIVE', note: '[V] 会员状态']
  buddhist_tradition      varchar(30)  [note: '[V] 佛教传承']
  ordination_status       varchar(30)  [note: '[V] 戒别（Bhikkhu 等）']
  created_at              timestamp    [not null]

  // ── Admin + SW Only ─────────────────────────────────────
  spoken_language         varchar(100) [note: 'Admin+SW only']
  whatsapp_enabled        boolean      [not null, default: false, note: 'Admin+SW only']
  address_text            text         [note: 'Admin+SW only - 完整地址']
  postal_code             varchar(20)  [note: 'Admin+SW only']
  vihara_type             varchar(50)  [note: 'Admin+SW only']
  date_joined             date         [note: 'Admin+SW only']
  membership_remarks      text         [note: 'Admin+SW only']

  // Identity
  nric_name_en                   varchar(150) [note: 'Admin+SW only']
  nric_name_chn                  varchar(100) [note: 'Admin+SW only']
  nric_no                        varchar(50)  [note: 'Admin+SW only']
  ordination_certificate_status  varchar(20)  [note: 'Admin+SW only']
  date_of_verification           date         [note: 'Admin+SW only']

  // Personal
  gender         varchar(10)  [note: 'Admin+SW only']
  date_of_birth  date         [note: 'Admin+SW only']
  marital_status varchar(30)  [note: 'Admin+SW only']
  nationality    varchar(50)  [note: 'Admin+SW only']
  ethnicity      varchar(50)  [note: 'Admin+SW only']
  dialect_group  varchar(50)  [note: 'Admin+SW only']

  // Ordination details
  date_of_tonsure      date         [note: 'Admin+SW only']
  country_of_tonsure   varchar(50)  [note: 'Admin+SW only']
  place_of_tonsure     varchar(100) [note: 'Admin+SW only']
  date_of_ordination   date         [note: 'Admin+SW only']
  country_of_ordination varchar(50) [note: 'Admin+SW only']
  place_of_ordination  varchar(100) [note: 'Admin+SW only']

  // Wellbeing
  wellbeing_living_conditions  boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_mental_health      boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_physical_health    boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_financial_stability boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_social_support     boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_legal_issues       boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_spiritual          boolean [not null, default: false, note: 'Admin+SW only']
  wellbeing_remarks            text    [note: 'Admin+SW only']

  // Special Needs & Finance
  special_needs        varchar(100) [note: 'Admin+SW only']
  special_needs_remarks text        [note: 'Admin+SW only']
  bank_transfer_info   varchar(100) [note: 'Admin+SW only']
  pay_now_info         varchar(100) [note: 'Admin+SW only']
  next_of_kin_contact  varchar(100) [note: 'Admin+SW only - 近亲联系人']
  comments             text         [note: 'Admin+SW only']
}

Table related_contact [note: 'ADMIN + SW only'] {
  id                bigint       [pk, increment, not null]
  client_id         bigint       [not null, ref: > client.id]
  name              varchar(100) [not null]
  relationship_type varchar(50)
  phone             varchar(20)
  email             varchar(100)
  address_text      text
  is_primary        boolean      [not null, default: false]
  notes             text
  created_at        timestamp    [not null]
}


// ============================================================
// ZONE: CASE  [ADMIN + SW ONLY]
// ============================================================

Table case [note: 'ADMIN + SW only\nclient_id = primary client (shortcut)\nclient_case = M:N full relationship'] {
  id               bigint       [pk, increment, not null]
  case_code        varchar(50)  [unique, not null]
  title            varchar(255) [not null]
  description      text
  service_type     varchar(50)  [not null]
  priority         varchar(20)  [not null, default: 'NORMAL', note: 'LOW | NORMAL | HIGH | URGENT']
  status           varchar(20)  [not null, default: 'OPEN', note: 'OPEN | IN_PROGRESS | CLOSED']
  color_code       varchar(20)  [note: 'RED | ORANGE | YELLOW | GREEN | GREY | BLACK']
  tradition        varchar(30)
  opened_at        timestamp    [not null]
  closed_at        timestamp
  created_by       bigint       [not null, ref: > users.id]
  created_at       timestamp    [not null]
  client_id        bigint       [ref: > client.id, note: 'Primary client shortcut FK']
  social_worker_id bigint       [ref: > users.id, note: 'Responsible social worker']
  comments         text
  remarks          text
}

Table client_case [note: 'ADMIN + SW only\nM:N bridge: one case may involve multiple clients'] {
  id                bigint    [pk, increment, not null]
  case_id           bigint    [not null, ref: > case.id]
  client_id         bigint    [not null, ref: > client.id]
  joined_at         timestamp [not null]
  added_by          bigint    [ref: > users.id]
  relationship_note text
}

Table case_assignment [note: 'ADMIN + SW only\nTracks which staff are assigned to each case'] {
  id              bigint      [pk, increment, not null]
  case_id         bigint      [not null, ref: > case.id]
  user_id         bigint      [not null, ref: > users.id]
  assignment_role varchar(50)
  status          varchar(20) [not null, default: 'ACTIVE']
  assigned_at     timestamp   [not null]
  end_at          timestamp
  assigned_by     bigint      [ref: > users.id]
}

Table case_status_history [note: 'ADMIN + SW only\nImmutable audit log of case status transitions'] {
  id         bigint    [pk, increment, not null]
  case_id    bigint    [not null, ref: > case.id]
  old_status varchar(20)
  new_status varchar(20) [not null]
  changed_by bigint    [ref: > users.id]
  changed_at timestamp [not null]
  remarks    text
}

Table case_note [note: 'ADMIN + SW only\nvisibility: INTERNAL | SHARED'] {
  id         bigint      [pk, increment, not null]
  case_id    bigint      [not null, ref: > case.id]
  note_type  varchar(50)
  content    text        [not null]
  visibility varchar(20) [not null, default: 'INTERNAL']
  created_by bigint      [ref: > users.id]
  created_at timestamp   [not null]
  updated_at timestamp
}

Table service_appointment [note: 'ADMIN + SW only'] {
  id               bigint       [pk, increment, not null]
  case_id          bigint       [not null, ref: > case.id]
  service_type     varchar(50)  [not null]
  scheduled_start  timestamp    [not null]
  scheduled_end    timestamp
  location         varchar(255)
  assigned_user_id bigint       [ref: > users.id]
  status           varchar(20)  [not null, default: 'SCHEDULED']
  created_by       bigint       [ref: > users.id]
  created_at       timestamp    [not null]
  updated_at       timestamp
}


// ============================================================
// ZONE: DOCUMENT  [ADMIN + SW ONLY]
// ============================================================

Table document [note: 'ADMIN + SW only\nCentral file store; linked via client_document or case_document'] {
  id            bigint       [pk, increment, not null]
  file_name     varchar(255) [not null]
  store_name    varchar(255) [not null]
  s3_bucket     varchar(255)
  s3_key        varchar(500)
  mime_type     varchar(100)
  file_size     bigint
  document_type varchar(50)
  status        varchar(20)  [not null, default: 'ACTIVE']
  uploaded_by   bigint       [ref: > users.id]
  uploaded_at   timestamp    [not null]
  description   text
  checksum      varchar(255)
  updated_at    timestamp
}

Table client_document [note: 'ADMIN + SW only - links document to client'] {
  id          bigint    [pk, increment, not null]
  client_id   bigint    [not null, ref: > client.id]
  document_id bigint    [not null, ref: > document.id]
  linked_by   bigint    [ref: > users.id]
  linked_at   timestamp [not null]
}

Table case_document [note: 'ADMIN + SW only - links document to case'] {
  id          bigint    [pk, increment, not null]
  case_id     bigint    [not null, ref: > case.id]
  document_id bigint    [not null, ref: > document.id]
  linked_by   bigint    [ref: > users.id]
  linked_at   timestamp [not null]
}


// ============================================================
// ZONE: VISIT REPORT  [ALL ROLES - WRITE]
// WRITE: All roles can submit
// READ:  Admin+SW see all; Volunteer sees only own records
// NOTE:  Linked to client, NOT to case (Volunteer has no case access)
// ============================================================

Table visit_report [note: 'WRITE: ALL roles\nREAD: Admin+SW = all records; Volunteer = own records only\nLinked to client (not case) so Volunteer can submit without case access'] {
  id                      bigint       [pk, increment, not null]
  client_id               bigint       [not null, ref: > client.id]
  created_by              bigint       [ref: > users.id]
  staff_name              varchar(150)
  report_timestamp        timestamp    [not null]
  date_of_visit           date         [not null]
  time_of_visit           varchar(20)
  duration_of_visit       varchar(50)
  location                varchar(255)
  programme_name          varchar(255)
  type_of_visit           varchar(100)
  purpose_of_visit        text
  what_was_done           text
  environment_observations text
  sangha_observations     text
  other_observations      text
  personal_reflections    text
  recommendations         text
  matters_to_highlight    text
  created_at              timestamp    [not null]
  updated_at              timestamp
}


// ============================================================
// TABLE GROUPS (visual zones in dbdiagram.io)
// ============================================================

TableGroup "Auth Zone [ADMIN ONLY]" {
  role
  users
  user_role
  invitation
  email_notification_log
  refresh_token
  two_factor_backup_code
}

TableGroup "Client Zone [column-level access]" {
  client
  related_contact
}

TableGroup "Case Zone [ADMIN + SW ONLY]" {
  case
  client_case
  case_assignment
  case_status_history
  case_note
  service_appointment
}

TableGroup "Document Zone [ADMIN + SW ONLY]" {
  document
  client_document
  case_document
}

TableGroup "Visit Report Zone [ALL ROLES - WRITE]" {
  visit_report
}
